src/sample/Errors/C0142.st
// C0142: A local variable named '{name}' is already defined in '{scope}'
FUNCTION_BLOCK C0142
    
    VAR
        A: INT;
        A: INT;
    END_VAR

    PROPERTY A : INT
        GET
            //
        END_GET
    END_PROPERTY
END_FUNCTION_BLOCK